# tileset

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md  conanfile.py
include/: tileset.h
include/tileset/: tile.h  tileset.h
src/: tileset.cpp
